objects/Account.object
<CustomObject>
    <fields>
        <fullName>TW1_UF_de_emissao__c</fullName>
        <label>UF de emissão</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_URL_Cardapio__c</fullName>
        <label>URL Cardápio</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_URL_Reserva__c</fullName>
        <label>URL Reserva</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>Clientes</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>TW1_CPF__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>TW1_Telefone_comercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Clientes</label>
        <language>en_US</language>
        <sharedTo>
            <group>TW1_Grupo_Area_Atendimento</group>
            <group>TW1_Grupo_Botafogo_Praia_Shopping</group>
            <group>TW1_Grupo_Boulevard_Rio_Shopping</group>
            <group>TW1_Grupo_Centervale_Shopping</group>
            <group>TW1_Grupo_Downtown</group>
            <group>TW1_Grupo_Golden_Square_Shopping</group>
            <group>TW1_Grupo_Natal_Shopping</group>
            <group>TW1_Grupo_North_Shopping_Fortaleza</group>
            <group>TW1_Grupo_North_Shopping_Joquei</group>
            <group>TW1_Grupo_North_Shopping_Maracanau</group>
            <group>TW1_Grupo_Pantanal_Shopping</group>
            <group>TW1_Grupo_Porto_Velho_Shopping</group>
            <group>TW1_Grupo_Rio_Design_Barra</group>
            <group>TW1_Grupo_Rio_Design_Leblon</group>
            <group>TW1_Grupo_Shopping_Center_IguaPortoAlegr</group>
            <group>TW1_Grupo_Shopping_Conjunto_Nacional</group>
            <group>TW1_Grupo_Shopping_Eldorado</group>
            <group>TW1_Grupo_Shopping_Metro_Itaquera</group>
            <group>TW1_Grupo_Shopping_Nova_America</group>
            <group>TW1_Grupo_Shopping_Nova_Igua_u</group>
            <group>TW1_Grupo_Shopping_Parque_Das_Bandeiras</group>
            <group>TW1_Grupo_Supervisao_BAN</group>
            <group>TW1_Grupo_Supervisao_BLD</group>
            <group>TW1_Grupo_Supervisao_BPS</group>
            <group>TW1_Grupo_Supervisao_CNB</group>
            <group>TW1_Grupo_Supervisao_CVS</group>
            <group>TW1_Grupo_Supervisao_DTW</group>
            <group>TW1_Grupo_Supervisao_ELD</group>
            <group>TW1_Grupo_Supervisao_GOL</group>
            <group>TW1_Grupo_Supervisao_ITA</group>
            <group>TW1_Grupo_Supervisao_NAT</group>
            <group>TW1_Grupo_Supervisao_NSF</group>
            <group>TW1_Grupo_Supervisao_NSJ</group>
            <group>TW1_Grupo_Supervisao_NSM</group>
            <group>TW1_Grupo_Supervisao_PAN</group>
            <group>TW1_Grupo_Supervisao_PVS</group>
            <group>TW1_Grupo_Supervisao_RDB</group>
            <group>TW1_Grupo_Supervisao_RDL</group>
            <group>TW1_Grupo_Supervisao_SCIPA</group>
            <group>TW1_Grupo_Supervisao_SNA</group>
            <group>TW1_Grupo_Supervisao_SNI</group>
            <group>TW1_Grupo_Supervisao_VSS</group>
            <group>TW1_Grupo_Via_Sul_Shopping</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contas_comerciais</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TW1_Conta_corporativa</value>
        </filters>
        <label>Contas comerciais</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contato_Comercial</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TW1_Conta_corporativa,Account.TW1_Contato_comercial_PJ,PersonAccount.TW1_Contato_comercial_PF</value>
        </filters>
        <label>Contato Comercial PF e PJ</label>
        <language>pt_BR</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Ancar</group>
            <group>TW1_Grupo_Area_Comercial</group>
            <group>TW1_Grupo_Assistente_Comercializacao</group>
            <group>TW1_Grupo_Executivo_de_vendas</group>
            <group>TW1_Grupo_Gerente_Regional</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lojas</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>TW1_Email__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>TW1_Tipo_de_Loja__c</columns>
        <columns>TW1_Piso__c</columns>
        <columns>TW1_CNPJ__c</columns>
        <columns>TW1_Nome_do_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TW1_Loja</value>
        </filters>
        <label>Lojas</label>
        <language>en_US</language>
        <sharedTo>
            <group>TW1_Grupo_Botafogo_Praia_Shopping</group>
            <group>TW1_Grupo_Boulevard_Rio_Shopping</group>
            <group>TW1_Grupo_Centervale_Shopping</group>
            <group>TW1_Grupo_Downtown</group>
            <group>TW1_Grupo_Golden_Square_Shopping</group>
            <group>TW1_Grupo_Natal_Shopping</group>
            <group>TW1_Grupo_North_Shopping_Fortaleza</group>
            <group>TW1_Grupo_North_Shopping_Joquei</group>
            <group>TW1_Grupo_North_Shopping_Maracanau</group>
            <group>TW1_Grupo_Pantanal_Shopping</group>
            <group>TW1_Grupo_Porto_Velho_Shopping</group>
            <group>TW1_Grupo_Rio_Design_Barra</group>
            <group>TW1_Grupo_Rio_Design_Leblon</group>
            <group>TW1_Grupo_Shopping_Center_IguaPortoAlegr</group>
            <group>TW1_Grupo_Shopping_Conjunto_Nacional</group>
            <group>TW1_Grupo_Shopping_Eldorado</group>
            <group>TW1_Grupo_Shopping_Metro_Itaquera</group>
            <group>TW1_Grupo_Shopping_Nova_America</group>
            <group>TW1_Grupo_Shopping_Nova_Igua_u</group>
            <group>TW1_Grupo_Shopping_Parque_Das_Bandeiras</group>
            <group>TW1_Grupo_Supervisao_BAN</group>
            <group>TW1_Grupo_Supervisao_BLD</group>
            <group>TW1_Grupo_Supervisao_BPS</group>
            <group>TW1_Grupo_Supervisao_CNB</group>
            <group>TW1_Grupo_Supervisao_CVS</group>
            <group>TW1_Grupo_Supervisao_DTW</group>
            <group>TW1_Grupo_Supervisao_ELD</group>
            <group>TW1_Grupo_Supervisao_GOL</group>
            <group>TW1_Grupo_Supervisao_ITA</group>
            <group>TW1_Grupo_Supervisao_NAT</group>
            <group>TW1_Grupo_Supervisao_NSF</group>
            <group>TW1_Grupo_Supervisao_NSJ</group>
            <group>TW1_Grupo_Supervisao_NSM</group>
            <group>TW1_Grupo_Supervisao_PAN</group>
            <group>TW1_Grupo_Supervisao_PVS</group>
            <group>TW1_Grupo_Supervisao_RDB</group>
            <group>TW1_Grupo_Supervisao_RDL</group>
            <group>TW1_Grupo_Supervisao_SCIPA</group>
            <group>TW1_Grupo_Supervisao_SNA</group>
            <group>TW1_Grupo_Supervisao_SNI</group>
            <group>TW1_Grupo_Supervisao_VSS</group>
            <group>TW1_Grupo_Via_Sul_Shopping</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lojas_Sem_Tipo_de_Loja_Preenchido</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>TW1_Data_de_fechamento__c</columns>
        <columns>TW1_Tipo_de_Loja__c</columns>
        <columns>TW1_Shopping__pc</columns>
        <columns>TW1_SGL_Shopping__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TW1_Loja</value>
        </filters>
        <filters>
            <field>TW1_Tipo_de_Loja__c</field>
            <operation>excludes</operation>
            <value>Lojas,Gastronomia,Salas,Rua Do Rio</value>
        </filters>
        <label>Lojas Sem Tipo de Loja Preenchido</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>TW1_Email_comercial__c</columns>
        <columns>TW1_Telefone_comercial__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.TW1_Prospect</value>
        </filters>
        <label>Prospects</label>
        <language>pt_BR</language>
        <sharedTo>
            <group>TW1_Grupo_Area_Comercial</group>
            <group>TW1_Grupo_Assistente_Comercializacao</group>
            <group>TW1_Grupo_Executivo_de_vendas</group>
            <group>TW1_Grupo_Gerente_Regional</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Marcas</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>TW1_Segmento1__c</columns>
        <columns>TW1_Segmento2__c</columns>
        <columns>Segmento3__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Shopping__pc</columns>
        <columns>TW1_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TW1_Marca</value>
        </filters>
        <label>Marcas</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <role>TW1_Administrador</role>
            <role>TW1_Comercial</role>
            <role>TW1_Comercial_EC</role>
            <role>TW1_Gerente_Regional</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todas_as_contas</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Shopping__c</field>
            <operation>equals</operation>
            <value>Shopping nova américa</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TW1_Loja</value>
        </filters>
        <label>Todas as contas</label>
    </listViews>
    
    <recordTypes>
        <fullName>TW1_Conta_corporativa</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar as contas corporativas da empresa.</description>
        <label>Conta corporativa</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Contato_comercial_PJ</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar um contato comercial pessoa jurídica</description>
        <label>Contato comercial PJ</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Loja</fullName>
        <active>true</active>
        <label>Loja</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Marca</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para criar o cadastro de uma marca</description>
        <label>Marca</label>
    </recordTypes>
    
    <validationRules>
        <fullName>TW1_Conta_Telefone_ou_email_obrigatorios</fullName>
        <active>true</active>
        <description>Regra que exige que o usuário forneça pelo menos um telefone ou e-mail para as contas do tipo contato comercial e prospect.</description>
        <errorConditionFormula>OR(
       AND(RecordType.Id=$Label.TW1_ID_tipo_conta_comercial_PF,ISBLANK(TW1_Telefone_comercial__c),ISBLANK(TW1_Email_comercial__c),ISBLANK(TW1_Celular__c)),
       AND(RecordType.Id=$Label.TW1_ID_tipo_conta_comercial_PJ,ISBLANK(TW1_Telefone_comercial__c),ISBLANK(TW1_Email_comercial__c),ISBLANK(TW1_Celular__c)),
       AND(RecordType.Id=$Label.TW1_ID_tipo_conta_Prospect, ISBLANK(Phone),ISBLANK(PersonMobilePhone),ISBLANK(PersonEmail))
)</errorConditionFormula>
        <errorMessage>Favor informar Telefone ou Celular ou E-mail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Conta_ValidaCEP</fullName>
        <active>false</active>
        <description>Valida o formato do campo CEP</description>
        <errorConditionFormula>NOT(REGEX(CEP__c,&quot;\\d{5}(-\\d{3})?&quot;))</errorConditionFormula>
        <errorMessage>Favor preencher o campo CEP no formato 12345-678</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Conta_Valida_Telefone</fullName>
        <active>false</active>
        <description>Se houver algum carácter no campos CPF ou Telefone que não seja número o salvamento será cancelado.</description>
        <errorConditionFormula>(NOT(ISNUMBER(Phone)) || NOT(ISNUMBER(PersonMobilePhone))) &amp;&amp; NOT(ISBLANK(Phone))</errorConditionFormula>
        <errorMessage>Não é permitido nenhum tipo de carácter nos campos &quot;Telefone&quot; e &quot;Celular&quot; .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Conta_Verificar_TipoLoja_Rua_Rio</fullName>
        <active>false</active>
        <description>Quando o tipo de loja for igual a &quot;Rua do Rio&quot; o shopping deve ser igual a &quot;Shopping Nova América&quot;.</description>
        <errorConditionFormula>INCLUDES(TW1_Tipo_de_Loja__c, &apos;Rua Do Rio&apos;) &amp;&amp; TW1_Shopping__c &lt;&gt; &apos;a0D1I000000lC0yUAE&apos;</errorConditionFormula>
        <errorMessage>Quando o tipo de loja for igual a &quot;Rua do Rio&quot; o shopping deve ser igual a &quot;Shopping Nova América&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Conta_Verificar_Tipo_Loja_Sala</fullName>
        <active>true</active>
        <description>Quando o tipo for sala e o shopping for diferente de &quot;Shoping Conjunto Nacional&quot; ou  &quot;Shopping Nova America&quot; bloqueia salvamento.</description>
        <errorConditionFormula>INCLUDES(TW1_Tipo_de_Loja__c, &apos;Sala&apos;) &amp;&amp; (TW1_Shopping__c &lt;&gt; &quot;Shopping Nova América&quot; ||  TW1_Shopping__c &lt;&gt; &quot;Shopping Conjunto Nacional&quot;)</errorConditionFormula>
        <errorMessage>Loja só poderá ser do tipo &quot;Sala&quot; quando o shopping for igual a &quot;Shopping Nova América&quot; ou &quot;Shopping Conjunto Nacional&quot;</errorMessage>
    </validationRules>
    
    
    
    

</CustomObject>